[package]
name = "may_minihttp"
version = "0.1.0"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
may = "0.3"
log = "0.4"
itoa = "1"
bytes = "1"
httpdate = "1"
httparse = "1"
crossbeam = "0.8"
once_cell = "1"

[dev-dependencies]
atoi = "2"
num_cpus = "1.0"
smallvec = "1.1"
env_logger = "0.10"
serde_json = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
buf-min = { version = "0.7", features = ["bytes"] }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git" }
mimalloc = { version = "0.1", default-features = false }
nanorand = { version = "0.7", default-features = false, features = ["std", "wyrand"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false

# [patch.crates-io]
# may = { path = "../may" }

