[package]
name = "may_minihttp"
version = "0.1.11"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
repository = "https://github.com/Xudong-Huang/may_minihttp.git"
homepage = "https://github.com/Xudong-Huang/may_minihttp.git"
documentation = "https://docs.rs/may_minihttp"
description = "Mini http server that implemented on top of [may](https://github.com/Xudong-Huang/may)"
readme = "README.md"
keywords = ["http", "server", "may"]
categories = ["web-programming::http-server"]
license = "MIT/Apache-2.0"

[dependencies]
log = "0.4"
itoa = "1"
bytes = "1"
httpdate = "1"
httparse = "1"
once_cell = "1"

# Using our fork with JSF-compliant unwrap() fixes and safe coroutine spawning
may = { git = "https://github.com/microscaler/may.git", branch = "task-1.1-safe-coroutine-spawning", default-features = false }

[dev-dependencies]
atoi = "2"
num_cpus = "1.0"
smallvec = "1.1"
env_logger = "0.11"
serde_json = "1"

log = { version = "0.4", features = ["release_max_level_off"] }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
buf-min = { version = "0.7", features = ["bytes"] }

mimalloc = { version = "0.1", default-features = false }
nanorand = { version = "0.7", default-features = false, features = ["std", "wyrand"] }

# Load testing and integration testing
goose = "0.18.1"
testcontainers = "0.15"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dev-dependencies]
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git", default-features = false }

[features]
default = ["may/default"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false

# [patch.crates-io]
# may = { path = "../may" }
